# BrainFuckIntepreter

./: .gitignore  CMakeLists.txt  may.bf
include/core/: Error.h  FuckCore.h
src/: interpereter.cpp  main.cpp
src/core/: Error.cpp  FuckCore.cpp
